@@ -1,3 +1,14 @@
+2008-02-25  Chris Morley
+
+	* src/forcefield.cpp: added (double)cast to sqrt to prevent
+	compiler error.
+	
+	* src/formats/xml/xml.cpp(XMLConversion::WriteStream): do not
+	write when buffer empty. Work around to prevent crash in CMLFormat
+	which occurs when freeing libxml2 writer. I don't understand exactly
+	what is happening here. I wish we had a C++ XML library!
+	I hope cures bugs #1815533 and #1900480.
+
 2008-02-25  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/msiformat.cpp: Finally fixed bond connections and
